# numorph_3dunet

./: .gitignore  Dockerfile_update  README.md  pyproject.toml  setup.cfg  setup.py
src/numorph_3dunet/: __init__.py  __main__.py  cli.py  version.py
src/numorph_3dunet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/numorph_3dunet/nuclei/: generate_chunks.py
