[metadata]
name = numorph_3dunet
version = 1.0.1
description = Numorph segmentation of cell nuclei using a 3dunet.
author = Carolin Schwitalla
author_email = carolin.schwitalla@uni-tuebingen.de
license = MIT
url = https://github.com/qbic-pipelines/numorph_3dunet
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6, <3.7
install_requires =
    cloudpickle==1.5.0
    cycler==0.10.0
    cytoolz==0.10.1
    dask==2.24.0
    decorator==4.4.2
    kiwisolver==1.2.0
    networkx==2.5
    olefile==0.46
    pillow==7.2.0
    pyparsing==2.4.7
    python-dateutil==2.8.2
    pyyaml==5.3.1
    six==1.15.0
    toolz==0.10.0
    tornado==6.0.4
    absl-py==0.10.0
    astor==0.8.1
    connected-components-3d==1.8.0
    gast==0.4.0
    grpcio==1.31.0
    h5py==2.10.0
    imageio==2.9.0
    importlib-metadata==1.7.0
    joblib==0.16.0
    keras==2.1.6
    keras-applications==1.0.8
    keras-preprocessing==1.1.2
    markdown==3.2.2
    mat73==0.46
    matplotlib==3.3.1
    nibabel==2.4.0
    nilearn==0.6.2
    numexpr==2.7.1
    numpy==1.16.0
    opencv-python==4.2.0.32
    pydot==1.4
    protobuf==3.13.0
    pywavelets==1.1.1
    scikit-image==0.16.2
    scikit-learn==0.23.2
    scipy==1.2.1
    simpleitk==1.2.0
    tables==3.6.1
    termcolor==1.1.0
    threadpoolctl==2.1.0
    werkzeug==1.0.1
    zipp==3.1.0
    pandas==1.1.5


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    numorph_3dunet = numorph_3dunet.cli:run